SynProdGITV1/force-app/main/default/objects/SAP_S4_Order_Type_Determination__c/SAP_S4_Order_Type_Determination__c.object-meta.xml
<CustomObject>
    <description>Object to store the SAP S4 Order Types</description>
    <label>SAP S4 Order Type Determination</label>
    <nameField>
        <displayFormat>S4O-{0000000}</displayFormat>
        <label>SAP S4 Order Type Determination Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SAP S4 Order Type Determination</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>