SynProdGITV1/force-app/main/default/objects/SAP_S4_Order_Type_Determination__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>To check the record is Active</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>