SynProdGITV1/force-app/main/default/objects/SAP_S4_Order_Type_Determination__c/fields/Item_Category__c.field-meta.xml
<CustomField>
    <fullName>Item_Category__c</fullName>
    <label>Item Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Item_Category</valueSetName>
    </valueSet>
</CustomField>