SynProdGITV1/force-app/main/default/objects/SAP_S4_Order_Type_Determination__c/fields/S4_Order_Type__c.field-meta.xml
<CustomField>
    <fullName>S4_Order_Type__c</fullName>
    <label>S4 Order Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>S4_Order_Type</valueSetName>
    </valueSet>
</CustomField>