SynProdGITV1/force-app/main/default/objects/SAP_S4_Order_Type_Determination__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Salesforce_Order_Type__c</columns>
    <columns>Item_Category_Group__c</columns>
    <columns>S4_Order_Type__c</columns>
    <columns>Item_Category__c</columns>
    <columns>Active__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>